remove .idea in head

--- a/app/Resources/views/components/navbar.html.twig
+++ b/app/Resources/views/components/navbar.html.twig
@@ -38,6 +38,11 @@
                     </a>
                 </li>
                 <li>
+                    <a data-toggle="modal" data-target="#myModal" rel="tooltip" title="Contactez-moi" data-placement="bottom" href="#" class="btn btn-white btn-simple btn-just-icon">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
                     <a rel="tooltip" title="Suivez moi sur Twitter" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
                         <i class="fa fa-twitter"></i>
                     </a>
