--- a/app/Resources/views/faq.html.twig
+++ b/app/Resources/views/faq.html.twig
@@ -4,7 +4,7 @@
 
 {% block brand %}
     <h1>FAQ*</h1>
-    <h3><small><small>Foire au question</small></small></h3>
+    <h3>Foire au question</h3>
 {% endblock %}
 
 {% block body %}
