--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block brand %}
     <h1>Index*</h1>
-    <h3><small><small>c'est l'acceuil</small></small></h3>
+    <h3>c'est l'acceuil</h3>
 {% endblock %}
 
 {% block body %}
