--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -60,6 +60,8 @@
 
     {% include ':components:footer.html.twig' %}
 </div>
+
+{% include ':components:contact-modal.html.twig' %}
 </body>
 
 {% block javascript %}
