--- a/app/Resources/views/components/footer.html.twig
+++ b/app/Resources/views/components/footer.html.twig
@@ -4,7 +4,7 @@
             <ul>
                 <li>
                     <a href="{{ path('app_homepage') }}">
-                        Home
+                        <i class="fa fa-home fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
@@ -20,6 +20,11 @@
                 <li>
                     <a href="#">
                         Blog
+                    </a>
+                </li>
+                <li>
+                    <a data-toggle="modal" data-target="#myModal" href="#">
+                        Contact
                     </a>
                 </li>
 
