--- a/app/Resources/views/components/contact-modal.html.twig
+++ b/app/Resources/views/components/contact-modal.html.twig
@@ -6,15 +6,52 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <i class="material-icons">clear</i>
                 </button>
-                <h4 class="modal-title">Contactez-moi</h4>
+                <h4 class="modal-title text-center">Contactez-moi</h4>
             </div>
             <div class="modal-body">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
-                </p>
+                <div class="row">
+                    <div class="col-sm-offset-1 col-sm-8">
+                        <form action="#" class="form-horizontal">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="material-icons">face</i>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Firstname">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="material-icons">face</i>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Lastname">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="material-icons">contact_mail</i>
+                                    </span>
+                                    <input type="email" class="form-control" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="material-icons">message</i>
+                                    </span>
+                                    <textarea class="form-control" placeholder="Here can be your nice text" rows="3"></textarea>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Envoyer</button>
-                <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">
+                        <i class="material-icons">send</i> Envoyer
+                </button>
             </div>
         </div>
     </div>
